@@ -100,10 +100,10 @@ module Capybara
 
     ##
     #
-    # @return [String] A snapshot of the HTML of the current document, as it looks right now (potentially modified by JavaScript).
+    # @return [String] A snapshot of the DOM of the current document, as it looks right now (potentially modified by JavaScript).
     #
     def html
-      driver.body
+      driver.html
     end
 
     ##
